Fix tests and static analysis

--- a/mypy.ini
+++ b/mypy.ini
@@ -37,5 +37,8 @@ ignore_missing_imports = true
 [mypy-psutil.*]
 ignore_missing_imports = true
 
+[mypy-container]
+ignore_errors = true
+
 [mypy-tests.*]
 ignore_errors = true
