--- a/mypy.ini
+++ b/mypy.ini
@@ -37,6 +37,9 @@ ignore_missing_imports = true
 [mypy-psutil.*]
 ignore_missing_imports = true
 
+[mypy-tabulate.*]
+ignore_missing_imports = true
+
 [mypy-container]
 ignore_errors = true
 
