Run formatting and update mypy config

--- a/mypy.ini
+++ b/mypy.ini
@@ -14,6 +14,7 @@ no_implicit_optional = true
 warn_return_any = true
 warn_unused_configs = true
 show_error_codes = true
+exclude = (^src/container\.py$)
 
 # Silence decorator errors
 disable_error_code = misc
