fix: resolve container pack alias and mypy

--- a/mypy.ini
+++ b/mypy.ini
@@ -38,5 +38,11 @@ ignore_missing_imports = true
 [mypy-psutil.*]
 ignore_missing_imports = true
 
+[mypy-yaml.*]
+ignore_missing_imports = true
+
+[mypy-tabulate.*]
+ignore_missing_imports = true
+
 [mypy-tests.*]
 ignore_errors = true
