--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -27,6 +27,7 @@ hvac>=2.3.0,<3.0.0
 argon2-cffi>=23.1.0
 cryptography>=38.0.4
 filelock>=3.13.0
+tabulate>=0.9
 pynacl>=1.5.0
 pre-commit>=2.20.0
 atheris>=2.1.0; sys_platform == "linux" and python_version < "3.12"
