--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     hooks:
       - id: ruff-format
         name: Ruff (format)
-        stages: [commit]
+        stages: [pre-commit]
         language_version: python3
 
   # isort – проверка и сортировка импортов
@@ -25,7 +25,7 @@ repos:
       - id: isort
         name: isort (check imports)
         args: ["--profile", "black"]
-        stages: [commit]
+        stages: [pre-commit]
         language_version: python3
 
   # Проверка YAML, удаление лишних пробелов, финальная пустая строка
