--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,15 @@
-# SPDX-License-Identifier: MIT
 # SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
+# SPDX-License-Identifier: MIT
 
 name: CI
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -18,14 +21,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.11', '3.12', '3.13']
-
+        python-version: [3.11, 3.12, 3.13]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '${{ matrix.python-version }}'
           cache: pip
 
       - name: Install dependencies
@@ -45,7 +49,9 @@ jobs:
 
       - name: Build PQ wheels
         run: python tools/build_pq_wheels.py
-      - uses: actions/upload-artifact@v4
+
+      - name: Upload PQ wheels
+        uses: actions/upload-artifact@v4
         with:
           name: pq-wheels
           path: dist/*_pq*.whl
@@ -58,7 +64,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Trivy scan (vuln only)
         uses: aquasecurity/trivy-action@0.20.0
