--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,31 @@
-argon2-cffi
+pytest>=8.0.0
+pytest-cov>=5.0.0
+pytest-timeout>=2.3.0
+hypothesis>=6.0.0
+click>=8.1.0
+pytest-xdist>=3.5.0
+ruff>=0.2.0
+black>=23.1.0
+isort>=5.10.1
+mypy>=1.8.0
+bandit>=1.7.0
+semgrep>=1.18.0
+reuse>=2.1.0
+hvac>=2.3.0,<3.0.0
+argon2-cffi>=23.1.0
 cryptography>=38.0.4
-flask
+filelock>=3.13.0
 pynacl>=1.5.0
-prometheus-client
-pytest
-pytest-timeout
-hypothesis
-PyQt5>=5.15
+pre-commit>=2.20.0
+flask>=2.2.0
+prometheus-client>=0.16.0
+pyinstaller>=6.0
 PyYAML>=6.0
+types-PyYAML>=6.0
 boto3>=1.28.0
 zstandard>=0.23.0
 tqdm>=4.66.0
+psutil>=5.9.0
 requests>=2.32.0
+git+https://github.com/meilof/pysnark  # альтернативная библиотека для zk-SNARKs
+# или можно использовать python-libsnark, если предпочтительнее
