--- a/.github/workflows/publish-dry-run.yml
+++ b/.github/workflows/publish-dry-run.yml
@@ -1,7 +1,11 @@
 name: Publish to PyPI (dry run)
+
 on:
+  workflow_dispatch:
   push:
-    branches: [main]
+    branches:
+      - main
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -10,10 +14,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.11"
       - name: Install build tools
-        run: |
-          pip install build twine
+        run: pip install build twine
+      - name: Make release.sh executable
+        run: chmod +x scripts/release.sh
       - name: Run release script
-        run: |
-          scripts/release.sh --repository-url https://test.pypi.org/legacy/ --dry-run
+        run: scripts/release.sh --repository-url https://test.pypi.org/legacy/ --dry-run
