--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -1,28 +1,25 @@
-name: Publish Python package
+name: Publish to PyPI
 
 on:
+  workflow_dispatch:
   push:
     tags:
-      - 'v*.*.*'
+      - "v*"
 
 jobs:
-  build-and-publish:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
-
+          python-version: "3.11"
       - name: Install build tools
-        run: python -m pip install --upgrade build
-
-      - name: Build distributions
-        run: python -m build --sdist --wheel --outdir dist
-
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@v1
-        with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
+        run: pip install build twine
+      - name: Make release.sh executable
+        run: chmod +x scripts/release.sh
+      - name: Run release script
+        run: scripts/release.sh --repository-url https://upload.pypi.org/legacy/
+        env:
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
