--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,123 @@
-argon2-cffi
-cryptography>=38.0.4
-flask
-pynacl>=1.5.0
-prometheus-client
-pytest
-pytest-timeout
-hypothesis
-PyQt5>=5.15
-PyYAML>=6.0
-boto3>=1.28.0
-zstandard>=0.23.0
-tqdm>=4.66.0
-requests>=2.32.0
+altgraph==0.17.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+attrs==25.3.0
+bandit==1.8.5
+binaryornot==0.4.4
+black==25.1.0
+blinker==1.9.0
+boltons==21.0.0
+boolean.py==5.0
+boto3==1.38.46
+botocore==1.38.46
+bracex==2.6
+certifi==2025.6.15
+cffi==1.17.1
+cfgv==3.4.0
+chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.1.8
+click-option-group==0.5.7
+colorama==0.4.6
+coverage==7.9.1
+cryptography==42.0.8
+defusedxml==0.7.1
+Deprecated==1.2.18
+distlib==0.3.9
+exceptiongroup==1.2.2
+execnet==2.1.1
+face==24.0.0
+filelock==3.18.0
+Flask==2.3.3
+glom==22.1.0
+googleapis-common-protos==1.70.0
+hvac==2.3.0
+hypothesis==6.135.17
+identify==2.6.12
+idna==3.10
+importlib_metadata==7.1.0
+iniconfig==2.1.0
+isort==6.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jmespath==1.0.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+license-expression==30.4.3
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mypy==1.16.1
+mypy_extensions==1.1.0
+nodeenv==1.9.1
+opentelemetry-api==1.25.0
+opentelemetry-exporter-otlp-proto-common==1.25.0
+opentelemetry-exporter-otlp-proto-http==1.25.0
+opentelemetry-instrumentation==0.46b0
+opentelemetry-instrumentation-requests==0.46b0
+opentelemetry-proto==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
+opentelemetry-util-http==0.46b0
+packaging==25.0
+pathspec==0.12.1
+pbr==6.1.1
+peewee==3.18.1
+pefile==2023.2.7
+pillow==11.2.1
+platformdirs==4.3.8
+pluggy==1.6.0
+pre_commit==4.2.0
+prometheus_client==0.22.1
+protobuf==4.25.8
+psutil==7.0.0
+pycparser==2.22
+Pygments==2.19.2
+pyinstaller==6.14.1
+pyinstaller-hooks-contrib==2025.5
+PyNaCl==1.5.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.0
+PySide6==6.9.1
+PySide6_Addons==6.9.1
+PySide6_Essentials==6.9.1
+pystray==0.19.5
+pytest==8.4.1
+pytest-cov==6.2.1
+pytest-qt==4.4.0
+pytest-timeout==2.4.0
+pytest-xdist==3.7.0
+python-dateutil==2.9.0.post0
+python-debian==1.0.1
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.4
+reuse==5.0.2
+rich==13.5.3
+rpds-py==0.25.1
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+ruff==0.12.1
+s3transfer==0.13.0
+semgrep==1.127.1
+setuptools==80.9.0
+shamir==17.12.0
+shiboken6==6.9.1
+six==1.17.0
+sortedcontainers==2.4.0
+stevedore==5.4.1
+tabulate==0.9.0
+tomli==2.0.2
+tomlkit==0.13.3
+tqdm==4.67.1
+types-PyYAML==6.0.12.20250516
+typing_extensions==4.14.0
+urllib3==2.5.0
+virtualenv==20.31.2
+wcmatch==8.5.2
+Werkzeug==3.1.3
+wrapt==1.17.2
+zipp==3.23.0
+zstandard==0.23.0
