--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ click==8.1.8
 click-option-group==0.5.7
 colorama==0.4.6
 coverage==7.9.1
-cryptography==42.0.8
+cryptography>=44.0.1
 defusedxml==0.7.1
 Deprecated==1.2.18
 distlib==0.3.9
@@ -64,7 +64,7 @@ pathspec==0.12.1
 pbr==6.1.1
 peewee==3.18.1
 pefile==2023.2.7
-pillow==11.2.1
+pillow>=11.3.0
 platformdirs==4.3.8
 pluggy==1.6.0
 pre_commit==4.2.0
