--- a/.semgrep/custom/pq-key-none.yml
+++ b/.semgrep/custom/pq-key-none.yml
@@ -1,10 +1,7 @@
+# .semgrep/custom/pq-key-none.yml
 rules:
-  - id: pq-key-none
-    message: PQ keys must not be None
-    severity: ERROR
-    languages: [python]
-    pattern-either:
-      - pattern: PQAEAD.encrypt(None, ...)
-      - pattern: PQAEAD.decrypt(None, ...)
-    metadata:
-      cwe: CWE-476
+- id: pq-key-none
+  languages: [python]
+  severity: WARNING
+  message: Don't pass None as the key
+  pattern: PQAEAD.encrypt(None, $B)
