--- a/.semgrep/custom/insecure-hash.yml
+++ b/.semgrep/custom/insecure-hash.yml
@@ -1,11 +1,8 @@
+# .semgrep/custom/insecure-hash.yml
 rules:
-  - id: insecure-hash-function
-    message: "Use of insecure hash function"
-    severity: ERROR
-    languages: [python]
-    pattern-either:
-      - pattern: hashlib.md5($X)
-      - pattern: hashlib.sha1($X)
-    fix: hashlib.sha256($X)
-    metadata:
-      cwe: CWE-328
+- id: insecure-hash
+  languages: [python]
+  severity: WARNING
+  message: Use SHA-256 instead of MD5
+  pattern: hashlib.md5($X)
+  fix: hashlib.sha256($X)
