fix: рабочие semgrep-правила, зелёные тесты, автозамена

--- a/.semgrep/custom/click-prompt-insecure.yml
+++ b/.semgrep/custom/click-prompt-insecure.yml
@@ -1,8 +1,7 @@
-# .semgrep/custom/click-prompt-insecure.yml
 rules:
 - id: click-prompt-insecure
   languages: [python]
   severity: WARNING
-  message: "Use hide_input=True when prompting for passwords"
-  pattern: click.prompt($ARGS)
-  fix: click.prompt($ARGS, hide_input=True)
+  message: Use hide_input=True when prompting for passwords
+  pattern: click.prompt($A)
+  fix: click.prompt($A, hide_input=True)
