--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -29,6 +29,7 @@ filelock>=3.13.0
 pynacl>=1.5.0
 pre-commit>=2.20.0
 atheris>=2.1.0; python_version < "3.12"
+tabulate>=0.9
 
 # Метрики и веб-сервер
 flask>=2.2.0
