fix: Исправление ошибок CI

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: MIT
+# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
+
 name: Quality / CI pipeline
 
 on:
@@ -17,6 +20,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
       - name: Install dev-deps
         run: pip install -e .[dev]
@@ -56,6 +63,10 @@ jobs:
         with:
           python-version: "3.13"
 
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
+
       - run: pip install -e .[dev]
 
       - run: SKIP_FUZZ=1 ZILANT_ALLOW_ROOT=1 pytest -q -m perf --disable-warnings --maxfail=1
@@ -72,6 +83,10 @@ jobs:
         with:
           python-version: "3.13"
 
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
+
       - run: pip install -e .[dev]
 
       - run: pytest -q tests/test_stream_large.py tests/test_stream_resume.py
@@ -86,6 +101,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
       - run: pip install -e .[dev]
 
@@ -149,6 +168,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
       - name: Install build deps
         run: pip install -e .[dev] build pyyaml
