--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: pip
 
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
