--- a/.github/workflows/zilant-ci.yml
+++ b/.github/workflows/zilant-ci.yml
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: MIT
+# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
+
 name: zilant-ci
 
 on:
@@ -17,6 +20,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
       - name: Install dev-deps
         run: pip install -e .[dev]
@@ -54,6 +61,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
+
       - run: pip install -e .[dev]
       - run: SKIP_FUZZ=1 ZILANT_ALLOW_ROOT=1 pytest -q -m perf --disable-warnings --maxfail=1
 
@@ -67,6 +79,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
+
       - run: pip install -e .[dev]
       - run: pytest -q tests/test_stream_large.py tests/test_stream_resume.py
 
@@ -79,6 +96,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
+
       - run: pip install -e .[dev]
       - run: pytest -q tests/test_cli_observability.py
 
@@ -138,6 +160,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
+      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      - name: Install libsodium-dev
+        run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
       - name: Install build deps
         run: pip install -e .[dev] build pyyaml
