--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           python-version: "3.13"
 
-      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      # ФИКС: Добавляем установку libsodium
       - name: Install libsodium-dev
         run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
@@ -63,7 +63,7 @@ jobs:
         with:
           python-version: "3.13"
 
-      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      # ФИКС: Добавляем установку libsodium
       - name: Install libsodium-dev
         run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
@@ -83,7 +83,7 @@ jobs:
         with:
           python-version: "3.13"
 
-      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      # ФИКС: Добавляем установку libsodium
       - name: Install libsodium-dev
         run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
@@ -102,7 +102,7 @@ jobs:
         with:
           python-version: "3.13"
 
-      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      # ФИКС: Добавляем установку libsodium
       - name: Install libsodium-dev
         run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
@@ -169,7 +169,7 @@ jobs:
         with:
           python-version: "3.13"
 
-      # ИСПРАВЛЕНИЕ: Устанавливаем системную зависимость для PyNaCl
+      # ФИКС: Добавляем установку libsodium
       - name: Install libsodium-dev
         run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
