--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -26,7 +26,8 @@ jobs:
 
       - name: Install dev-deps
         run: |
-          pip install --force-reinstall --no-binary :all: --no-cache-dir pynacl
+          pip uninstall -y pynacl || true
+          pip install --no-cache-dir --no-binary :all: --force-reinstall pynacl
           pip install -e .[dev]
 
       - name: Pre-commit
@@ -46,11 +47,14 @@ jobs:
         with:
           python-version: "3.13"
 
-      # ФИКС: Добавляем установку libsodium
       - name: Install libsodium-dev
         run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
-      - run: pip install -e .[dev]
+      - name: Install dev-deps
+        run: |
+          pip uninstall -y pynacl || true
+          pip install --no-cache-dir --no-binary :all: --force-reinstall pynacl
+          pip install -e .[dev]
 
       - run: SKIP_FUZZ=1 ZILANT_ALLOW_ROOT=1 pytest -q -m perf --disable-warnings --maxfail=1
 
@@ -66,13 +70,18 @@ jobs:
         with:
           python-version: "3.13"
 
-      # ФИКС: Добавляем установку libsodium
       - name: Install libsodium-dev
         run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
-      - run: pip install -e .[dev]
+      - name: Install dev-deps
+        run: |
+          pip uninstall -y pynacl || true
+          pip install --no-cache-dir --no-binary :all: --force-reinstall pynacl
+          pip install -e .[dev]
 
       - run: pytest -q tests/test_stream_large.py tests/test_stream_resume.py
+
+  # ... (остальные jobs без тестов можно не трогать, но для единообразия я поправлю все)
 
   #────────────────────────────── CLI-polish tests ──────────────────────────────
   cli-polish:
@@ -85,11 +94,14 @@ jobs:
         with:
           python-version: "3.13"
 
-      # ФИКС: Добавляем установку libsodium
       - name: Install libsodium-dev
         run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
-      - run: pip install -e .[dev]
+      - name: Install dev-deps
+        run: |
+          pip uninstall -y pynacl || true
+          pip install --no-cache-dir --no-binary :all: --force-reinstall pynacl
+          pip install -e .[dev]
 
       - run: pytest -q tests/test_cli_observability.py
 
@@ -152,12 +164,14 @@ jobs:
         with:
           python-version: "3.13"
 
-      # ФИКС: Добавляем установку libsodium
       - name: Install libsodium-dev
         run: sudo apt-get update && sudo apt-get install -y libsodium-dev
 
       - name: Install build deps
-        run: pip install -e .[dev] build pyyaml
+        run: |
+          pip uninstall -y pynacl || true
+          pip install --no-cache-dir --no-binary :all: --force-reinstall pynacl
+          pip install -e .[dev] build pyyaml
 
       - name: Build PQ wheels
         run: python tools/build_pq_wheels.py
@@ -179,10 +193,3 @@ jobs:
           name: pq-wheels
           path: dist/*.whl
           if-no-files-found: ignore
-
-  # sign (закомментировано)
-  # sign:
-  #   needs: build-pq
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     …
