--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # ФИКС: Сначала удаляем pynacl, если он криво встал, потом ставим из исходников
-          pip uninstall -y pynacl || true
-          pip install --no-cache-dir --no-binary :all: --force-reinstall pynacl
           pip install ".[dev]"
+          # ФИКС: Переустанавливаем pynacl ПОВЕРХ, чтобы гарантировать сборку с libsodium
+          pip install --no-cache-dir --force-reinstall --no-binary :all: pynacl
 
       - name: Lint
         run: |
@@ -72,7 +71,7 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: true # Добавим, чтобы видеть ошибки загрузки
+          fail_ci_if_error: true
 
   trivy-scan:
     name: Trivy SCA / CVE scan
