--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -10,7 +10,6 @@ on:
     branches: [ main, ci-check-ready ]
 
 jobs:
-  #────────────────────────────── Lint + type + tests ──────────────────────────────
   quality:
     runs-on: ubuntu-latest
     steps:
@@ -26,9 +25,8 @@ jobs:
 
       - name: Install dev-deps
         run: |
-          pip uninstall -y pynacl || true
-          pip install --no-cache-dir --no-binary :all: --force-reinstall pynacl
           pip install -e .[dev]
+          pip install --no-cache-dir --force-reinstall --no-binary :all: pynacl
 
       - name: Pre-commit
         run: pre-commit run --all-files
